feature: add main page

--- a/blocks/movies/header/header.css
+++ b/blocks/movies/header/header.css
@@ -3,7 +3,7 @@
 
 .header {
   display: flex;
-  background-image: url("../../images/fordvferrari.jpg");
+  background-image: url("../../../images/ford-v-ferrari.jpg");
   width: 480px;
   height: 352px;
   border-bottom-left-radius: 30px;
