--- a/blocks/movies/header/__button/header__button.css
+++ b/blocks/movies/header/__button/header__button.css
@@ -1,8 +1,8 @@
 .header__button {
-  background-image: url("../../../images/backsymbol.svg");
+  background-image: url("../../../../images/backsymbol.svg");
   background-repeat: no-repeat;
   height: 20px;
-  weight: 20px;
+  width: 20px;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   margin: 61px 41px;
