--- a/blocks/movies/movie/__genre/movie__genre.css
+++ b/blocks/movies/movie/__genre/movie__genre.css
@@ -1,12 +1,13 @@
 .movie__genre {
-  font-family: Proxima Nova;
+  border: 1.5px solid rgb(18, 21, 61, 0.15);
+  box-sizing: border-box;
+  border-radius: 50px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   color: #434670;
-  opacity: 0.15;
-  border: 2px solid #12153d;
-  border-radius: 45px;
-  padding: 10px 20px;
+  padding: 8px 24px;
+  margin-right: 20px;
+  font-family: proxima nova, sans-serif;
 }
