--- a/pages/movies.css
+++ b/pages/movies.css
@@ -1,5 +1,8 @@
 @import url("../blocks/movies/header/header.css");
 @import url("../blocks/movies/movie/movie.css");
+@import url("../blocks/movies/plot/plot.css");
+@import url("../blocks/movies/people/people.css");
+@import url("../blocks/movies/scroll/scroll.css");
 
 .movies {
   width: 480px;
