feature: add fonts

--- a/blocks/index/page/page.css
+++ b/blocks/index/page/page.css
@@ -2,7 +2,7 @@
   max-width: 480px;
   margin: 0 auto;
   padding: 56px 0 0 0;
-  font-family: 'Proxima Nova', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
