--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url("../vendor/normalize.css");
+@import url("../vendor/fonts/fonts.css");
 @import url("../blocks/index/button/button.css");
 @import url("../blocks/index/content-title/content-title.css");
 @import url("../blocks/index/cards/cards.css");
