--- a/blocks/index/page/page.css
+++ b/blocks/index/page/page.css
@@ -1,7 +1,7 @@
 .page {
   max-width: 480px;
   margin: 0 auto;
-  padding: 56px 0 0 0;
+  padding: 0;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   -moz-osx-font-smoothing: grayscale;
