--- a/pages/movies.css
+++ b/pages/movies.css
@@ -3,6 +3,8 @@
 @import url("../blocks/movies/plot/plot.css");
 @import url("../blocks/movies/people/people.css");
 @import url("../blocks/movies/scroll/scroll.css");
+@import url("../blocks/index/page/page.css");
+
 
 .movies {
   width: 480px;
