feature: optimize list elements

--- a/blocks/index/categories/categories.css
+++ b/blocks/index/categories/categories.css
@@ -1,2 +1,7 @@
 @import url('./__item/categories__item.css');
 @import url('./__list/categories__list.css');
+
+.categories {
+  margin: 0;
+  padding-left: 32px;
+}
