--- a/blocks/index/statuses/statuses.css
+++ b/blocks/index/statuses/statuses.css
@@ -1,3 +1,8 @@
 @import url('./__item/statuses__item.css');
 @import url('./__item/_active/statuses__item_active.css');
 @import url('./__list/statuses__list.css');
+
+.statuses {
+  padding: 48px 0 16px 32px;
+  margin-bottom: 32px;
+}
