--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url("../blocks/index/cards/cards.css");
 @import url("../blocks/index/categories/categories.css");
 @import url("../blocks/index/header/header.css");
+@import url("../blocks/index/list/list.css");
 @import url("../blocks/index/page/page.css");
 @import url("../blocks/index/scroll/scroll.css");
 @import url("../blocks/index/statuses/statuses.css");
