--- a/blocks/index/cards/cards.css
+++ b/blocks/index/cards/cards.css
@@ -5,3 +5,8 @@
 @import url('./__list/cards__list.css');
 @import url('./__text/cards__text.css');
 @import url('./__title/cards__title.css');
+
+.cards {
+  margin: 0;
+  padding: 72px 0;
+}
