--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url("../blocks/index/content-title/content-title.css");
 @import url("../blocks/index/cards/cards.css");
 @import url("../blocks/index/categories/categories.css");
+@import url("../blocks/index/category/category.css");
 @import url("../blocks/index/header/header.css");
 @import url("../blocks/index/list/list.css");
 @import url("../blocks/index/page/page.css");
