--- a/blocks/index/list/list.css
+++ b/blocks/index/list/list.css
@@ -1,5 +1,9 @@
-@import url('./_with-scrollbar/list_with-scrollbar.css');
-
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.list_with-scrollbar {
+  padding-bottom: 16px;
 }
