--- a/blocks/index/statuses/statuses.css
+++ b/blocks/index/statuses/statuses.css
@@ -3,6 +3,6 @@
 @import url('./__list/statuses__list.css');
 
 .statuses {
-  padding: 48px 0 16px;
+  padding: 48px 0 16px 32px;
   margin-bottom: 32px;
 }
