--- a/blocks/index/cards/__item/cards__item.css
+++ b/blocks/index/cards/__item/cards__item.css
@@ -1,9 +1,3 @@
-.cards__item {
-  display: flex;
-  flex-direction: column;
+.cards__item:not(:last-child) {
   margin-right: 59px;
-}
-
-.cards__item:last-child {
-  margin-right: 0;
 }
