--- a/blocks/index/categories/__item/categories__item.css
+++ b/blocks/index/categories/__item/categories__item.css
@@ -1,7 +1,3 @@
-.categories__item {
+.categories__item:not(:last-child) {
   margin-right: 20px;
-}
-
-.categories__item:last-child {
-  margin-right: 0;
 }
