--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,9 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts/fonts.css");
 @import url("../blocks/index/button/button.css");
+@import url("../blocks/index/content-link/content-link.css");
 @import url("../blocks/index/content-title/content-title.css");
+@import url("../blocks/index/card/card.css");
 @import url("../blocks/index/cards/cards.css");
 @import url("../blocks/index/categories/categories.css");
 @import url("../blocks/index/category/category.css");
