--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,7 @@
 @import url("../blocks/index/button/button.css");
 @import url("../blocks/index/content-link/content-link.css");
 @import url("../blocks/index/content-title/content-title.css");
-@import url("../blocks/index/card/card.css");
+@import url("../blocks/index/movie-card/movie-card.css");
 @import url("../blocks/index/cards/cards.css");
 @import url("../blocks/index/categories/categories.css");
 @import url("../blocks/index/category/category.css");
