--- a/pages/index.css
+++ b/pages/index.css
@@ -1,14 +1,14 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts/fonts.css");
-@import url("../blocks/index/button/button.css");
-@import url("../blocks/index/content-link/content-link.css");
-@import url("../blocks/index/content-title/content-title.css");
-@import url("../blocks/index/movie-card/movie-card.css");
-@import url("../blocks/index/movie-cards/movie-cards.css");
-@import url("../blocks/index/categories/categories.css");
-@import url("../blocks/index/category/category.css");
-@import url("../blocks/index/header/header.css");
-@import url("../blocks/index/list/list.css");
-@import url("../blocks/index/page/page.css");
-@import url("../blocks/index/scroll/scroll.css");
-@import url("../blocks/index/statuses/statuses.css");
+@import url("../blocks/button/button.css");
+@import url("../blocks/content-link/content-link.css");
+@import url("../blocks/content-title/content-title.css");
+@import url("../blocks/movie-card/movie-card.css");
+@import url("../blocks/movie-cards/movie-cards.css");
+@import url("../blocks/categories/categories.css");
+@import url("../blocks/category/category.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/list/list.css");
+@import url("../blocks/page/page.css");
+@import url("../blocks/scroll/scroll.css");
+@import url("../blocks/statuses/statuses.css");
