--- a/pages/movies.css
+++ b/pages/movies.css
@@ -1,14 +1,10 @@
-@import url("../blocks/movies/header/header.css");
-@import url("../blocks/index/header/header.css");
-@import url("../blocks/index/button/button.css");
-@import url("../blocks/index/category/category.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/movies/rating/rating.css");
+@import url("../blocks/button/button.css");
+@import url("../blocks/category/category.css");
 @import url("../blocks/movies/movie/movie.css");
 @import url("../blocks/movies/plot/plot.css");
 @import url("../blocks/movies/people/people.css");
 @import url("../blocks/movies/scroll/scroll.css");
-@import url("../blocks/index/page/page.css");
+@import url("../blocks/page/page.css");
 
-.movies {
-  max-width: 480px;
-  margin: 0 auto;
-}
