--- a/blocks/people/people.css
+++ b/blocks/people/people.css
@@ -1,11 +1,5 @@
-@import url("./__title/people__title.css");
-@import url("./__grid/people__grid.css");
-
-
-/* @import url("./__card/people__card.css");
-@import url("./__photo/people__photo.css");
-@import url("./__name/people__name.css");
-@import url("./__occupation/people__occupation.css"); */
+@import url('./__title/people__title.css');
+@import url('./__grid/people__grid.css');
 
 .people {
   padding: 0 32px 30px 32px;
