feature: fix icons

--- a/blocks/icon/_back/icon_back.css
+++ b/blocks/icon/_back/icon_back.css
@@ -1,5 +1,5 @@
 .icon_back {
-  background: url('../../../../images/back_icon.svg') center no-repeat;
+  background: url('../../../images/back_icon.svg') center no-repeat;
   width: 24px;
   height: 24px;
 }
