--- a/blocks/icon/_search/icon_search.css
+++ b/blocks/icon/_search/icon_search.css
@@ -1,5 +1,5 @@
 .icon_search {
-  background: url('../../../../images/search_icon.svg') center no-repeat;
+  background: url('../../../images/search_icon.svg') center no-repeat;
   width: 24px;
   height: 24px;
 }
